Don't default source & bin directories, don't compile all sources in script directory
Previously, Chipmunk would pull in all sources
and binaries in the current directory. In
practice this tended to cause too many
sources to be pulled in, resulting in compilation
failures if a directory contained multiple
independent scripts.